--- a/src/main/resources/templates/BookList.html
+++ b/src/main/resources/templates/BookList.html
@@ -3,32 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <title>Книги</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h1>Список книг</h1>
-<h3>Добавить книгу</h3>
-<form action="/book/add" method="post">
-  <input type="text" name="name" placeholder="Имя" required>
-  <input type="text" name="author" placeholder="Автор" required>
-  <input type="number" name="price" placeholder="Цена" required>
-  <button type="submit">Добавить книгу</button>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<a href="/logout">Выйти из аккаунта</a>
+<h1 align="center">Список книг</h1>
+<h3 align="center">Добавить книгу</h3>
+<form action="#" th:action="@{/admin/book/add}"  method="post">
+  <div align="center">
+    <input type="text" name="name" placeholder="Имя" required>
+    <input type="text" name="author" placeholder="Автор" required>
+    <input type="number" name="price" placeholder="Цена" required>
+    <br>
+    <b><p th:text="${message}" style="color: red"></p></b>
+    <button class="btn btn-success" type="submit">Добавить книгу</button>
+  </div>
+</form>
+<h3 align="center">Поиск книг</h3>
+<form action="#" th:action="@{/user/book/id}" method="post">
+  <div align="center">
+    <input type="text" name="id" placeholder="Найти книгу" required>
+    <button class="btn btn-secondary" type="submit">Найти</button>
+  </div>
+</form>
+<h3 align="center">Фильтрация книг</h3>
+<div align="center">
+  <form action="#" th:action="@{/user/book/filterStudentDelTwo}" method="post" style="display: inline">
+    <button class="btn btn-light" type="submit">Дорогие книги</button>
+  </form>
+  <form action="#" th:action="@{/user/book/filterStudentNot}" method="post" style="display: inline">
+    <button class="btn btn-light" type="submit">Дешёвые книги</button>
+  </form>
+  <form action="#" th:action="@{/user/book/filterStudentSort}" method="post" style="display: inline">
+    <button class="btn btn-light" type="submit">По алфавиту</button>
+  </form>
+</div>
+<h3>Удаление книг</h3>
+<form action="#" th:action="@{/admin/book/deleteAll}"  method="post">
+  <button class="btn btn-danger" type="submit">Удалить все книги</button>
 </form>
 <h2>Все книги:</h2>
 <ul>
   <th:block th:each="student : ${books}"> <!--цикл в котором происходит вывод всех студентов -->
     <li>
-      <span th:text="${student.name} + ' ' + ${student.author} + ' ' + ${student.price}"></span>
-      <form action="/book/update" method="post" style="display: inline;">
-        <input type="hidden" name="id" th:value="${student.id}">
-        <input type="text" name="name" placeholder="Название книги" required>
-        <input type="text" name="author" placeholder="Автор" required>
-        <input type="number" name="price" placeholder="Цена" required>
-        <button type="submit">Обновить</button>
-      </form>
-      <form action="/book/delete" method="post" style="display: inline;">
-        <input type="hidden" name="id" th:value="${student.id}" placeholder="Найти по id">
-        <button type="submit">Удалить</button>
-      </form>
+      \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+      <br>
+      <th:block th:if="${student.delete == false}">
+        <span th:text="${student.name} + ' ' + ${student.author} + ' ' + ${student.price}"></span>
+        <form action="#" th:action="@{/admin/book/update/{id}(id=${student.id})}" method="post" style="display: inline;">
+          <input type="hidden" name="id" th:value="${student.id}">
+          <input type="text" name="name" placeholder="Название книги" required>
+          <input type="text" name="author" placeholder="Автор" required>
+          <input type="number" name="price" placeholder="Цена" required>
+          <button class="btn btn-warning" type="submit">Обновить</button>
+          <b><p th:text="${up_message}" style="color: red"></p></b>
+        </form>
+        <form action="#" th:action="@{/admin/book/delete/{id}(id=${student.id})}" method="post" style="display: inline;">
+          <input type="hidden" name="id" th:value="${student.id}" placeholder="Найти по id">
+          <button class="btn btn-danger" type="submit">Удалить</button>
+        </form>
+        <form action="#" th:action="@{/admin/book/IsDeleteTrue/{id}(id=${student.id})}" method="post" style="display: inline">
+          <input type="hidden" name="id" th:value="${student.id}">
+          <input type="hidden" name="name" th:value="${student.name}">
+          <input type="hidden" name="author" th:value="${student.author}">
+          <input type="hidden" name="price" th:value="${student.price}">
+          <button class="btn btn-primary" type="submit">Удалить логически</button>
+        </form>
+      </th:block>
+      <br>
+      //////////////////////////////////////////
     </li>
   </th:block>
 </ul>
