--- a/src/main/resources/templates/TransportList.html
+++ b/src/main/resources/templates/TransportList.html
@@ -3,30 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <title>Транспорт</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h1>Список транспорта</h1>
-<h3>Добавить транспорт</h3>
-<form action="/tran/add" method="post">
-  <input type="text" name="name" placeholder="Имя" required>
-  <input type="text" name="type" placeholder="Тип транспорта" required>
-  <button type="submit">Добавить транспорт</button>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<a href="/logout">Выйти из аккаунта</a>
+<h1 align="center">Список транспорта</h1>
+<h3 align="center">Добавить транспорт</h3>
+<form action="#" th:action="@{/admin/tran/add}" method="post">
+    <div align="center">
+        <input type="text" name="name" placeholder="Имя" required>
+        <input type="text" name="type" placeholder="Тип транспорта" required>
+        <br>
+        <b><p th:text="${message}" style="color: red"></p></b>
+        <button class="btn btn-success" type="submit">Добавить транспорт</button>
+    </div>
+</form>
+<h3 align="center">Поиск транспорта</h3>
+<form action="#" th:action="@{/user/tran/id}" method="post">
+    <div align="center">
+    <input type="text" name="id" placeholder="Найти транспорт" required>
+    <button class="btn btn-secondary" type="submit">Найти</button>
+    </div>
+</form>
+<h3 align="center">Фильтрация транспорта</h3>
+<div align="center">
+    <form action="#" th:action="@{/user/tran/filterStudentDelTwo}" method="post" style="display: inline">
+        <button class="btn btn-light" type="submit">Грузовики</button>
+    </form>
+    <form action="#" th:action="@{/user/tran/filterStudentNot}" method="post" style="display: inline">
+        <button class="btn btn-light" type="submit">Автомобили</button>
+    </form>
+    <form action="#" th:action="@{/user/tran/filterStudentSort}" method="post" style="display: inline">
+        <button class="btn btn-light" type="submit">По алфавиту</button>
+    </form>
+</div>
+<h3>Удаление транспорта</h3>
+<form action="#" th:action="@{/admin/tran/deleteAll}" method="post">
+    <button class="btn btn-danger" type="submit">Удалить весь транспорт</button>
 </form>
 <h2>Все транспорты:</h2>
 <ul>
   <th:block th:each="student : ${transports}"> <!--цикл в котором происходит вывод всех студентов -->
     <li>
-        <span th:text="${student.name} + ' ' + ${student.type}"></span>
-        <form action="/tran/update" method="post" style="display: inline;">
-          <input type="hidden" name="id" th:value="${student.id}">
-          <input type="text" name="name" placeholder="Название транспорта" required>
-          <input type="text" name="type" placeholder="Тип транспорта" required>
-          <button type="submit">Обновить</button>
-        </form>
-        <form action="/tran/delete" method="post" style="display: inline;">
-          <input type="hidden" name="id" th:value="${student.id}" placeholder="Найти по id">
-          <button type="submit">Удалить</button>
-        </form>
+        \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+        <th:block th:if="${student.delete == false}">
+            <span th:text="${student.name} + ' ' + ${student.type}"></span>
+            <form action="#" th:action="@{/admin/tran/update/{id}(id=${student.id})}" method="post" style="display: inline;">
+                <input type="hidden" name="id" th:value="${student.id}">
+                <input type="text" name="name" placeholder="Название транспорта" required>
+                <input type="text" name="type" placeholder="Тип транспорта" required>
+                <button class="btn btn-warning" type="submit">Обновить</button>
+                <b><p th:text="${up_message}" style="color: red"></p></b>
+            </form>
+            <form action="#" th:action="@{/admin/tran/delete/{id}(id=${student.id})}" method="post" style="display: inline;">
+                <input type="hidden" name="id" th:value="${student.id}">
+                <button class="btn btn-danger" type="submit">Удалить</button>
+            </form>
+            <form action="#" th:action="@{/admin/tran/IsDeleteTrue/{id}(id=${student.id})}" method="post" style="display: inline">
+                <input type="hidden" name="id" th:value="${student.id}">
+                <input type="hidden" name="name" th:value="${student.name}">
+                <input type="hidden" name="type" th:value="${student.type}">
+                <button class="btn btn-primary" type="submit">Удалить логически</button>
+            </form>
+        </th:block>
+        <br>
+        //////////////////////////////////////////
     </li>
   </th:block>
 </ul>
